# ai-job-orchestrator

./: .env.example  .gitignore  docker-compose.yml  pyproject.toml  readme.md
alembic/: env.py
alembic/versions/: 0001_initial_schema.py
app/: config.py  database.py  main.py  models.py  observability.py  schemas.py
app/api/: health.py  jobs.py  retrieval.py
app/domain/: chunking.py  job_state.py  retry_policy.py
app/providers/: embeddings.py
app/services/: ingestion.py  jobs.py  retrieval.py
app/workers/: celery_app.py  tasks.py
docs/: privacy-policy.html
docs/superpowers/plans/: 2026-06-01-ai-job-orchestrator-implementation.md
docs/superpowers/specs/: 2026-06-01-ai-job-orchestrator-design.md
scripts/: benchmark_jobs.py  load_test.py
tests/: conftest.py  test_observability.py
tests/api/: test_health_api.py  test_jobs_api.py  test_retrieval_api.py
tests/domain/: test_chunking.py  test_job_state.py  test_retry_policy.py
tests/services/: test_ingestion.py  test_jobs.py  test_worker_execution.py
